force-app/main/default/objects/Conga_Batch_Processing_Logs__c/Conga_Batch_Processing_Logs__c.object-meta.xml
<CustomObject>
    <label>Conga Batch Processing Logs</label>
    <nameField>
        <displayFormat>CBPF-{0000}</displayFormat>
        <label>Conga Batch Processing Logs	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Batch Processing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>