force-app/main/default/objects/Conga_Batch_Processing_Logs__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <label>Batch Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>