force-app/main/default/objects/Conga_Batch_Processing_Logs__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>